--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -106,13 +106,13 @@
                 android:background="@drawable/btnsignin"
                 android:text="@string/login" />
 
-            <com.facebook.login.widget.LoginButton
+          <!--  <com.facebook.login.widget.LoginButton
                 android:id="@+id/login_button"
                 android:layout_width="162dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30dp"
-                android:layout_marginBottom="30dp" />
+                android:layout_marginBottom="30dp" />-->
 
             <LinearLayout
                 android:layout_width="match_parent"
