--- a/app/src/main/res/layout/fragment_upcoming.xml
+++ b/app/src/main/res/layout/fragment_upcoming.xml
@@ -25,4 +25,15 @@
         app:fabCustomSize="@dimen/_44sdp"
         app:srcCompat="@drawable/ic_baseline_add_24"
         app:tint="@color/white" />
+
+    <TextView
+        android:id="@+id/no_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:text="@string/no_upcoming_trips" />
 </RelativeLayout>
