--- a/app/src/main/res/layout/layout_floating_widget.xml
+++ b/app/src/main/res/layout/layout_floating_widget.xml
@@ -42,7 +42,7 @@
         <!--View while view is expanded-->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/expanded_container"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/_220sdp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:visibility="visible" />
