--- a/app/src/main/res/layout/floating_item.xml
+++ b/app/src/main/res/layout/floating_item.xml
@@ -4,7 +4,8 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/_8sdp"
+    android:layout_marginHorizontal="@dimen/_4sdp"
+    android:layout_marginTop="@dimen/_4sdp"
     android:backgroundTint="@color/colorPrimary"
     card_view:cardCornerRadius="@dimen/_8sdp">
 
@@ -18,6 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginHorizontal="@dimen/_8sdp"
+            android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/checkBox"
             app:layout_constraintHorizontal_bias="0.5"
