--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,7 +17,7 @@
             app:launchSingleTop="true" />
         <action
             android:id="@+id/action_upcomingFragment_to_addNote"
-            app:destination="@id/addNote"
+            app:destination="@id/addNoteFragment"
             app:popUpTo="@id/upcomingFragment"
             app:launchSingleTop="true" />
     </fragment>
@@ -81,7 +81,7 @@
             app:argType="string" />
     </fragment>
     <fragment
-        android:id="@+id/addNote"
+        android:id="@+id/addNoteFragment"
         android:name="com.example.easytripplanner.Fragments.AddNote"
         android:label="@string/add_note_title" >
         <argument
