--- a/app/src/main/res/layout/fragment_add_trip.xml
+++ b/app/src/main/res/layout/fragment_add_trip.xml
@@ -36,7 +36,8 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:targetApi="o" />
+            tools:targetApi="o"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:id="@+id/textView2"
