--- a/app/src/main/res/layout/trip_item_view.xml
+++ b/app/src/main/res/layout/trip_item_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,14 +18,17 @@
         android:paddingBottom="@dimen/_4sdp">
 
 
-        <Button
+        <ImageButton
             android:id="@+id/btnMore"
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_8sdp"
-            android:background="@drawable/ic_baseline_more_vert_24"
+            android:background="@android:color/transparent"
+            android:padding="@dimen/_4sdp"
+            app:srcCompat="@drawable/ic_baseline_more_vert_32"
             card_view:layout_constraintEnd_toEndOf="@+id/btn_Note"
-            card_view:layout_constraintTop_toTopOf="parent" />
+            card_view:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
 
 
         <TextView
@@ -107,14 +111,18 @@
             tools:text="15/10/2010 08:30 AM" />
 
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_Note"
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/_8sdp"
-            android:background="@drawable/ic_baseline_sticky_note_2_24"
+            android:background="@android:color/transparent"
+            android:padding="@dimen/_4sdp"
+            android:src="@drawable/ic_baseline_post_add_32"
+            app:layout_constraintBottom_toBottomOf="@+id/statusView"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintTop_toTopOf="@+id/statusView" />
+            card_view:layout_constraintTop_toTopOf="@+id/statusView"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/statusView"
