--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_35sdp"
                 android:layout_marginHorizontal="@dimen/_10sdp"
-                android:background="@drawable/btnframe"
+                android:background="@drawable/edit_text_frame"
                 android:hint="@string/email"
                 android:imeOptions="actionNext"
                 android:paddingHorizontal="@dimen/_10sdp"
@@ -59,7 +59,7 @@
                 android:layout_height="@dimen/_35sdp"
                 android:layout_marginHorizontal="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/btnframe"
+                android:background="@drawable/edit_text_frame"
                 android:hint="@string/password"
                 android:imeOptions="actionGo"
                 android:inputType="textPassword"
