--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -44,7 +44,7 @@
                 android:layout_height="@dimen/_35sdp"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:background="@drawable/btnframe"
+                android:background="@drawable/edit_text_frame"
                 android:hint="@string/full_name"
                 android:imeOptions="actionNext"
                 android:inputType="textPersonName|textCapWords"
@@ -60,7 +60,7 @@
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:background="@drawable/btnframe"
+                android:background="@drawable/edit_text_frame"
                 android:hint="@string/email"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
@@ -76,7 +76,7 @@
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:background="@drawable/btnframe"
+                android:background="@drawable/edit_text_frame"
                 android:hint="@string/password"
                 android:imeOptions="actionNext"
                 android:inputType="textPassword"
@@ -92,7 +92,7 @@
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:background="@drawable/btnframe"
+                android:background="@drawable/edit_text_frame"
                 android:hint="@string/confirm_password"
                 android:imeOptions="actionGo"
                 android:inputType="textPassword"
