--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -100,4 +100,10 @@
             android:name="ID"
             app:argType="string" />
     </fragment>
+
+    <fragment
+        android:id="@+id/aboutUs"
+        android:name="com.example.easytripplanner.Fragments.AboutFragment"
+        android:label="@string/about_us"
+        tools:layout="@layout/fragment_about" />
 </navigation>
