--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_35sdp"
             android:layout_marginHorizontal="@dimen/_8sdp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16sdp"
             android:background="@drawable/edit_text_frame"
             android:hint="@string/password"
             android:imeOptions="actionGo"
@@ -57,7 +57,7 @@
             android:padding="@dimen/_8sdp"
             android:text="@string/sign_up"
             android:textColor="#455A64"
-            android:textSize="18sp"
+            android:textSize="@dimen/_16ssp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/logLoginBtn"
@@ -91,7 +91,7 @@
             android:layout_height="wrap_content"
             android:text="@string/don_t_have_an_account"
             android:textColor="#3B5998"
-            android:textSize="18sp"
+            android:textSize="@dimen/_15ssp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/logSignUpBtn"
             app:layout_constraintEnd_toStartOf="@+id/logSignUpBtn"
