--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -19,7 +19,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
             android:fontFamily="@font/candal"
-            android:paddingVertical="@dimen/_32sdp"
             android:text="@string/registration"
             android:textColor="#455A64"
             android:textSize="@dimen/_32ssp"
@@ -52,7 +51,7 @@
             android:id="@+id/edEmail"
             android:layout_width="0dp"
             android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16sdp"
             android:background="@drawable/edit_text_frame"
             android:hint="@string/email"
             android:imeOptions="actionNext"
@@ -69,7 +68,7 @@
             android:id="@+id/edPassword"
             android:layout_width="0dp"
             android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16sdp"
             android:background="@drawable/edit_text_frame"
             android:hint="@string/password"
             android:imeOptions="actionNext"
@@ -86,7 +85,7 @@
             android:id="@+id/edCPassword"
             android:layout_width="0dp"
             android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16sdp"
             android:background="@drawable/edit_text_frame"
             android:hint="@string/confirm_password"
             android:imeOptions="actionGo"
@@ -105,7 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:background="@drawable/btnsignin"
-            android:text="Register"
+            android:text="@string/register"
             app:layout_constraintEnd_toEndOf="@+id/edCPassword"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edCPassword" />
